Fixed padding on mobile devices.

--- a/styles.css
+++ b/styles.css
@@ -297,7 +297,7 @@ a {
     }
 
     #about {
-        min-height: 1000px;
+        min-height: 1400px;
     }
 
     #about h1 {
